adjusted screen size

--- a/src/app/components/livestream/livestream.component.html
+++ b/src/app/components/livestream/livestream.component.html
@@ -16,7 +16,7 @@
                             <mat-icon>cloud_download</mat-icon>
                         </a>
                     </div>
-                    <div fxFlex="{{isWalkyAvailable == 'true' ? 80 : 100}}%" fxLayoutAlign="center center">
+                    <div fxFlex="{{isWalkyAvailable == true ? 80 : 100}}%" fxLayoutAlign="center center">
                             <img src="{{videoLink}}" height="100%" width="100%" />
                             <audio autoplay>
                                 <source src="{{audioLink}}">
